# Teleology-Engine

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  plan.md
cpp/: CPP_API_GUIDE.txt
cpp/include/: teleology.h  teleology_ffi.h
cpp/script/: main.cpp
crates/teleology-core/: Cargo.toml
crates/teleology-core/src/: archetypes.rs  armies.rs  batch.rs  character_gen.rs  characters.rs  diplomacy.rs  economy.rs  event_bus.rs  events.rs  game_ui.rs  lib.rs  map_file.rs  modifiers.rs  population.rs  progress_trees.rs  raycast.rs  simulation.rs  tags.rs  world.rs
crates/teleology-core/src/combat/: deployment.rs  mod.rs  stack.rs  tactical.rs  tile.rs
crates/teleology-editor/: Cargo.toml
crates/teleology-editor/src/: events_editor.rs  lib.rs  main.rs  map_editor.rs  media.rs  progress_trees_editor.rs  utils.rs  world.rs
crates/teleology-runtime/: Cargo.toml
crates/teleology-runtime/src/: audio.rs  c_api_core.rs  c_api_diplomacy.rs  c_api_economy.rs  c_api_events.rs  c_api_modifiers.rs  c_api_population.rs  c_api_spatial.rs  c_api_tags.rs  c_api_ui.rs  c_api_world.rs  lib.rs  main.rs  video.rs
crates/teleology-script-api/: Cargo.toml  build.rs  cbindgen.toml
crates/teleology-script-api/src/: ffi.rs  lib.rs
resources/scripts/: main.cpp
