[package]
name = "teleology-core"
version = "0.1.0"
edition = "2021"
description = "Data-oriented engine core: ECS, simulation tick, SoA layouts"

[dependencies]
# ECS and data-oriented iteration
bevy_ecs = "0.14"
# Parallel scheduling
rayon = "1.10"
# Id types for stable handles across frames
rustc-hash = "2.0"
# Serialization for save/load (grand strategy critical)
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
criterion = "0.5"
